test/Fail/Issue2253.err
Issue2253.agda:17.6-7: error: [SplitOnAbstract]
Cannot split on abstract data type B
when checking that the pattern x has type B
